DOC: fem solver updates

--- a/doc/tutorials/11_fem_2d_theory.ipynb
+++ b/doc/tutorials/11_fem_2d_theory.ipynb
@@ -5,7 +5,7 @@
    "id": "3da33693",
    "metadata": {},
    "source": [
-    "# 2D FEM Setup"
+    "**This notebook shall give an overview of the setup, implementation, and equations used in the FEM 2D solver**"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "## FEM Grid and Elements"
+    "## Grid and Elements"
    ]
   },
   {
@@ -595,12 +595,12 @@
     "```\n",
     "FEMAssemblyLayout        top-level container\n",
     "├── MatrixCOOPattern     COO local and global indices\n",
-    "├── RHSPattern           RHS vector indices\n",
-    "├── ScalingInfo          diagonal scaling factors\n",
-    "└── jacobian_terms       holds term/variable specific indices and precomputed values\n",
-    "```\n",
+    "├── RHSPattern           RHS vector structure\n",
+    "└── jacobian_terms       dict mapping (term, res, var) → JacobianTermMap\n",
     "\n",
-    "Note that similar containers exist for the rhs, but details are left out here.\n",
+    "COOLookup                memory-efficient index lookup (internal, used during layout build)\n",
+    "ScalingInfo              (from scaling.py) diagonal scaling factors\n",
+    "```\n",
     "\n",
     "<code style=\"color:#c586c0\">TermKey</code> is a combination of term and dependent variable.\n",
     "\n",
@@ -638,8 +638,9 @@
     "| Attribute | Type | Description |\n",
     "|-----------|------|-------------|\n",
     "| `coo_idx` | IntArray | Which COO entries receive contributions |\n",
-    "| `weights` | NDArray | precomputed integration weights |\n",
-    "| `sq_x`, `sq_y` | IntArray | Square indices for field value lookup |\n",
+    "| `weights` | NDArray | FEM integration weights |\n",
+    "| `flat_field_idx` | IntArray | Flat index into quad field for direct field lookup |\n",
+    "| `signs` | NDArray or None | Sign multipliers (+/-1) for derivative terms |\n",
     "\n",
     "<br>"
    ]
@@ -677,7 +678,7 @@
    "source": [
     "### Diagonal Scaling\n",
     "\n",
-    "Variables in the system span different magnitudes (e.g., ρ~10³ kg/m³, E~10⁸ J/m³), leading to an ill-conditioned Jacobian. Diagonal scaling improves conditioning without modifying the physics.\n",
+    "To prevent ill-conditioning of the system due to residuals being different by orders of magnitude (e.g., ρ~10³ kg/m³, E~10⁸ J/m³), we employ diagonal scaling.\n",
     "\n",
     "**Transformation**\n",
     "\n",
@@ -692,7 +693,7 @@
     "- $D_R = \\text{diag}(R_\\text{scale})$ — residual scaling (same as $D_q$ by convention)\n",
     "- $J^* = D_R^{-1} \\cdot J \\cdot D_q$\n",
     "- $R^* = D_R^{-1} \\cdot R$\n",
-    "- $\\delta q = D_q \\cdot \\delta q^*$\n",
+    "- $\\delta q^* = \\frac{\\delta q}{D_q}$\n",
     "\n",
     "<br>\n",
     "\n",
@@ -891,11 +892,13 @@
     "| `solver_fem_2d.py` | Main 2D FEM solver: Newton iteration, assembly dispatch, time-stepping |\n",
     "| `fem_2d/elements.py` | <code style=\"color:#c586c0\">TriangleQuadrature</code> - shape functions, derivatives, interpolation operators |\n",
     "| `fem_2d/terms.py` | <code style=\"color:#c586c0\">NonLinearTerm</code>, `get_active_terms()`, residual terms (`R11x`, `R11y`, ...) |\n",
-    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">ScalingInfo</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <br> <code style=\"color:#c586c0\">PETScAssemblyInfo</code> - precomputed indexing, local-global translation, scaling, and weightings |\n",
+    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <code style=\"color:#c586c0\">COOLookup</code>, <br> <code style=\"color:#c586c0\">PETScAssemblyInfo</code> - precomputed indexing, local-global translation, and weightings |\n",
+    "| `fem_2d/scaling.py` | <code style=\"color:#c586c0\">ScalingInfo</code>, `build_scaling()`, `compute_characteristic_scales()` - diagonal scaling |\n",
     "| `fem_2d/grid_index.py` | <code style=\"color:#c586c0\">GridIndexManager</code> - local/global index masks, BC handling, stencil connectivity |\n",
     "| `fem_2d/quad_fields.py` | <code style=\"color:#c586c0\">QuadFieldManager</code> - field storage, nodal→quadrature interpolation |\n",
     "| `fem_2d/petsc_system.py` | <code style=\"color:#c586c0\">PETScSystem</code> - distributed matrix assembly and KSP linear solve (parallel/serial) |\n",
-    "| `fem_2d/scipy_system.py` | <code style=\"color:#c586c0\">ScipySystem</code> - serial sparse solver fallback when PETSc unavailable |"
+    "| `fem_2d/scipy_system.py` | <code style=\"color:#c586c0\">ScipySystem</code> - serial sparse solver fallback when PETSc unavailable |\n",
+    "| `fem_2d/solution_guards.py` | `apply_guards()` - physical safeguards for Newton updates (density limiting) |"
    ]
   },
   {
@@ -903,7 +906,7 @@
    "id": "82fbdbf2",
    "metadata": {},
    "source": [
-    "# 2D Equations\n",
+    "# Equations\n",
     "\n",
     "Overview of 2D equations solved by the FEM framework."
    ]
@@ -1100,7 +1103,7 @@
     "- **R33y**: Shear work $\\tau_{yy}$ in y + height source\n",
     "- **R34**: Wall shear work (combines x and y wall velocities)\n",
     "- **R35x**, **R35y**: Thermal diffusion in x and y\n",
-    "- **R36**: Wall heat balance [see theory](./10_wall_heat.ipynb)\n",
+    "- **R36**: Wall heat balance [see theory](./10_wall_fluid_heatflow.ipynb)\n",
     "- **R37**: Height change over time"
    ]
   }
