--- a/doc/tutorials/05_lubrication.ipynb
+++ b/doc/tutorials/05_lubrication.ipynb
@@ -237,7 +237,11 @@
    "id": "13",
    "metadata": {},
    "source": [
-    "Now we can use the simulation for the nearly incompressible fluids and compare to an analytic solution for incompressible isoviscous fluids and the journal bearing geometry."
+    "Now we can use the simulation for the nearly incompressible fluids and compare to an analytic solution for incompressible isoviscous fluids and the journal bearing geometry.\n",
+    "\n",
+    "Note that the *Dowson-Higginson* equation of state does not include cavitation, i.e. the possibility of a gas phase. For our model this means that the fluid is assumed to sustain large tensile stresses (negative pressure) without cavitating. Despite not providing physical results in these cases, we use it here because it makes the problem simpler and, more importantly, there exist analytical solutions in literature that we can compare to.\n",
+    "\n",
+    "A more realistic behaviour can be obtained with an equation of state that considers cavitation and therefore does not output negative pressures. For that you can use e.g. the  *Bayada-Chupin* equation of state."
    ]
   },
   {
@@ -355,7 +359,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "gapflow_joss_review",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
