--- a/doc/tutorials/07_elastic_deformation.ipynb
+++ b/doc/tutorials/07_elastic_deformation.ipynb
@@ -414,7 +414,7 @@
    "id": "34",
    "metadata": {},
    "source": [
-    "Note that we allow negative pressures in this example. For more realistic behaviour, we can use an equation of state that considers cavitation and therefore does not output negative pressures. See the non-periodic example below that uses *Bayada-Chupin* equation of state."
+    "Note that, by using the *Dowson-Higginson* equation of state, we allow negative pressures in this example. For more physical behaviour, we should use an equation of state that considers cavitation and therefore does not output negative pressures. For that, see the non-periodic example below that uses *Bayada-Chupin* equation of state."
    ]
   },
   {
@@ -561,7 +561,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "gapflow_joss_review",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
