--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -11,6 +11,22 @@
   urldate = {2024-07-12}
 }
 
+@article{bayada2013_compressible,
+  title = {Compressible Fluid Model for Hydrodynamic Lubrication Cavitation},
+  author = {Bayada, G. and Chupin, L.},
+  year = 2013,
+  month = oct,
+  journal = {Journal of Tribology},
+  volume = {135},
+  number = {4},
+  pages = {041702},
+  publisher = {American Society of Mechanical Engineers Digital Collection},
+  issn = {0742-4787},
+  doi = {10.1115/1.4024298},
+  urldate = {2020-05-15},
+  langid = {english}
+}
+
 @article{stanley1997_FFT,
 	title = {An FFT-Based Method for Rough Surface Contact},
   author = {Stanley, H. M. and Kato, T.},
