--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ Hannes Holey <hannes.holey@unimi.it>
 Hannes Holey <56032774+hannes-holey@users.noreply.github.com>
 Christoph Huber <christoph.huber@kit.edu>
 Andrea Codrignani <48203272+Andrecodri@users.noreply.github.com>
+Dan Waxman <dan.waxman1@gmail.com>
