DOC: added new examples for 2D simulations and GP with MD data

--- a/doc/tutorials/02_stress_sympy.ipynb
+++ b/doc/tutorials/02_stress_sympy.ipynb
@@ -5,7 +5,7 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# Viscous stress tensor calculation with wall slip"
+    "# 2. Viscous stress tensor calculation with wall slip"
    ]
   },
   {
