--- a/doc/tutorials/04_confined_fluids.ipynb
+++ b/doc/tutorials/04_confined_fluids.ipynb
@@ -5,7 +5,7 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# Dynamics of highly confined fluids\n",
+    "# 4. Dynamics of highly confined fluids\n",
     "\n",
     "We consider a fluid confined between two parallel walls without relative movement.\n",
     "One can derive an analytic solution for the linearized equations, that describe viscous dissipation and transport in these systems (see [Holey et al., 2024](https://doi.org/10.1103/PhysRevFluids.9.014203)).\n",
