--- a/doc/tutorials/07_gp_mock.ipynb
+++ b/doc/tutorials/07_gp_mock.ipynb
@@ -5,7 +5,7 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# Gaussian process regression and active learning\n",
+    "# 7. Gaussian process regression and active learning\n",
     "\n",
     "Now we'll look at the same problem as in the previous tutorial, but replace the hardcoded constitutive laws with purely data-driven ones.\n",
     "In multiscale simulations, this data comes from molecular dynamics (MD) simulations.\n",
