MAINT: comments tutorial 8

--- a/doc/tutorials/08_gp_md.ipynb
+++ b/doc/tutorials/08_gp_md.ipynb
@@ -59,20 +59,19 @@
     "        max_steps: 10\n",
     "db:\n",
     "    dtool: True\n",
-    "    dtool_path: data/gapflow_training_lj  # defaults to options['output']/train   \n",
+    "    dtool_path: data/gapflow_training_lj \n",
     "    init_size: 5\n",
     "    init_method: rand\n",
-    "    init_width: 0.01 # default (for density)\n",
     "md:\n",
-    "    system: lj # Lennard-Jones system\n",
-    "    ncpu: 10  # Max. number of CPUs\n",
-    "    atoms_per_cpu: 1000  # Min. number of atoms per CPU\n",
-    "    infile: lmp/lj/in.lmp  # Location of the LAMMPS input file\n",
-    "    wallfile: lmp/lj/wall.lmp  # Location of the LAMMPS file that contains the coordinates of the wall atoms\n",
-    "    vWall: 0.12  # Sliding velocity of the lower wall (LJ units)\n",
-    "    cutoff: 2.5  # Cutoff radius of LJ interactions\n",
-    "    temp: 1.0   # Temperature\n",
-    "    tsample: 100000  # Sampling time\n",
+    "    system: lj                     # Lennard-Jones system\n",
+    "    ncpu: 10                       # Max. number of CPUs\n",
+    "    atoms_per_cpu: 1000            # Min. number of atoms per CPU\n",
+    "    infile: lmp/lj/in.lmp          # Location of the LAMMPS input file\n",
+    "    wallfile: lmp/lj/wall.lmp      # Location of the LAMMPS file that contains the coordinates of the wall atoms\n",
+    "    vWall: 0.12                    # Sliding velocity of the lower wall (LJ units)\n",
+    "    cutoff: 2.5                    # Cutoff radius of LJ interactions\n",
+    "    temp: 1.0                      # Temperature\n",
+    "    tsample: 100000                # Sampling time\n",
     "```\n",
     "\n",
     "Here, the `md` section of the YAML file configures the MD runs."
@@ -226,6 +225,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "adf27e4f-db6d-422f-9835-abacd5b13a46",
+   "metadata": {},
+   "source": [
+    "On a first impression, the results look qualitatively similar to those of the previous example (note that the geometry is slightly different here).\n",
+    "The most obvious difference, however, is the small density dip at the inlet while the pressure increases. Since pressure is not only a function of density\n",
+    "(but also gap height and mass flux), and since we expect $\\partial p/\\partial \\rho > 0$, this is most likely an inlet effect captured by the GP model.\n",
+    "If we decrease the minimum gap height of parbolic gap profile, more anomalies appear (see [Holey et al., Sci. Adv. 11, 2025](https://doi.org/10.1126/sciadv.adx4546))."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "787efeca-8e24-45e2-a511-1ed52bb6705e",
    "metadata": {},
    "source": [
@@ -313,7 +323,9 @@
     "\n",
     "`mpirun -n 1 python GaPFlow -i journal_1d_gold-hexadecane_gp_lammps.yaml`\n",
     "\n",
-    "and fetch it from [Zenodo](https://doi.org/10.5281/zenodo.18761223)."
+    "and fetch it from [Zenodo](https://doi.org/10.5281/zenodo.18761223).\n",
+    "\n",
+    "__WARNING: this dataset contains MD trajectories. The unpacked size is approximately 2GB.__"
    ]
   },
   {
@@ -358,9 +370,9 @@
     "numerics:\n",
     "    CFL: 0.5\n",
     "    adaptive: 1\n",
-    "    tol: 1e-7\n",
+    "    tol: 1e-9\n",
     "    dt: 1.\n",
-    "    max_it: 50_000\n",
+    "    max_it: 20_000\n",
     "properties:\n",
     "    shear: 2.15\n",
     "    bulk: 0.\n",
@@ -424,6 +436,14 @@
    "outputs": [],
    "source": [
     "mol_problem.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2845072d-106d-4615-b9ce-7f93ae6cdd7f",
+   "metadata": {},
+   "source": [
+    "The convergence to a steady state is a bit slow in this case. Thus, we have limited the simulation run to 20000 steps. Feel free to run it for longer!"
    ]
   },
   {
